[gd_scene load_steps=3 format=3 uid="uid://b1xl7km0tvbi6"]

[ext_resource type="Script" uid="uid://ch7gydcveddu4" path="res://src/ui/widgets/click_texture_button.gd" id="1_d8qny"]
[ext_resource type="AudioStream" uid="uid://d4buaef6wotn2" path="res://assets/sfx/menu_click.tres" id="2_1lndr"]

[node name="ClickTextureButton" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_d8qny")
modulate_pressed = Color(0.5, 0.5, 0.5, 1)
modulate_hovered = Color(0.75, 0.75, 0.75, 1)
modulate_disabled = Color(1, 1, 1, 0.482353)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_1lndr")
bus = &"SFX"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
